# Spices-Engine-Example

./: README.md
SpicesGame__2024_07_21__11_34_38/: .gitattributes  Application.cpp  Application.h  Arguments.h  CMakeLists.txt  CMakeSettings.json  CommandList00.cpp  CommandLists.h  CommonReplay.cpp  CommonReplay.h  DataScope.cpp  DataScope.h  DllCommon.h  Frame0Part00.cpp  FrameReset00.cpp  FrameSetup00.cpp  Helpers.cpp  Helpers.h  LinuxApplication.cpp  LinuxApplication.h  Main.cpp  PerfMarkersReset.cpp  PerfMarkersSetup.cpp  QnxApplication.cpp  QnxApplication.h  ReadOnlyDatabase.cpp  ReadOnlyDatabase.h  ReplayConfig.h  ReplayProcedures.cpp  ReplayProcedures.h  Resources.h  Resources00.cpp  Resources01.cpp  Resources02.cpp  SpicesGame__2024_07_21__11_34_38.ngfx-cppcap  ThreadPool.cpp  ThreadPool.h  ThreadPoolImpl.h  Threading.cpp  Threading.h  (+23 more)
SpicesGame__2024_07_21__11_34_38/Linux/: run_replay.sh
SpicesGame__2024_07_21__11_34_38/include/: VulkanHelpers.h  VulkanReplay.h  VulkanStructHydrator.h  vk_mem_alloc.h
SpicesGame__2024_07_21__11_34_38/include/VulkanTools/: ScopedVmaBuffer.h  VulkanNamespace.h  VulkanStructCopy.h
SpicesGame__2024_07_21__11_34_38/int/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GeneratedReplay.vcxproj  GeneratedReplay.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Main.vcxproj  Main.vcxproj.filters  ReplayExecutor.vcxproj  ReplayExecutor.vcxproj.filters  SpicesGame__2024_07_21__11_34_38.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
SpicesGame__2024_07_21__11_34_38/int/Debug/: GeneratedReplay.exp  GeneratedReplay.lib  ReplayExecutor.exp  ReplayExecutor.lib
SpicesGame__2024_07_21__11_34_38/int/GeneratedReplay.dir/Debug/: GeneratedReplay.dll.recipe  GeneratedReplay.ilk
SpicesGame__2024_07_21__11_34_38/int/GeneratedReplay.dir/Debug/GeneratedReplay.tlog/: CL.10268.write.1.tlog  CL.10484.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
SpicesGame__2024_07_21__11_34_38/int/GeneratedReplay.dir/RelWithDebInfo/: GeneratedReplay.dll.recipe  GeneratedReplay.ilk
SpicesGame__2024_07_21__11_34_38/int/GeneratedReplay.dir/RelWithDebInfo/GeneratedReplay.tlog/: CL.22604.write.1.tlog  CL.22976.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  GeneratedReplay.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
SpicesGame__2024_07_21__11_34_38/int/Main.dir/Debug/: SpicesGame.exe.recipe  SpicesGame.ilk
SpicesGame__2024_07_21__11_34_38/int/Main.dir/Debug/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Main.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SpicesGame__2024_07_21__11_34_38/int/Main.dir/RelWithDebInfo/: SpicesGame.exe.recipe  SpicesGame.ilk
SpicesGame__2024_07_21__11_34_38/int/Main.dir/RelWithDebInfo/Main.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SpicesGame__2024_07_21__11_34_38/int/RelWithDebInfo/: GeneratedReplay.exp  ReplayExecutor.exp
SpicesGame__2024_07_21__11_34_38/int/ReplayExecutor.dir/Debug/: ReplayExecutor.dll.recipe
SpicesGame__2024_07_21__11_34_38/int/ReplayExecutor.dir/Debug/ReplayExecutor.tlog/: CL.12292.write.1.tlog  CL.18448.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  ReplayExecutor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
SpicesGame__2024_07_21__11_34_38/int/ReplayExecutor.dir/RelWithDebInfo/: ReplayExecutor.dll.recipe
SpicesGame__2024_07_21__11_34_38/int/ReplayExecutor.dir/RelWithDebInfo/ReplayExecutor.tlog/: CL.10268.write.1.tlog  CL.12180.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  ReplayExecutor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
SpicesGame__2024_07_21__11_34_38/int/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
SpicesGame__2024_07_21__11_34_38/int/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog
SpicesGame__2024_07_21__11_34_38/int/x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.recipe
SpicesGame__2024_07_21__11_34_38/int/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
SpicesGame__2024_07_21__11_34_38/int/x64/RelWithDebInfo/INSTALL/: INSTALL.recipe
SpicesGame__2024_07_21__11_34_38/int/x64/RelWithDebInfo/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
SpicesGame__2024_07_21__11_34_38/int/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
SpicesGame__2024_07_21__11_34_38/int/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
